# welle.io

./: .gitignore  Announcement.md  CMakeLists.txt  Dockerfile.thailand  GUI-SETUP-INSTRUCTIONS.md  README.md  build-gui-check.sh  build-gui-local.sh  build-gui-simple.sh  build-script.sh  build-thailand-gui.sh  dab_alam_switching.md  docker-build.sh  docker-compose-working.yml  docker-compose.yml  install-gui-deps.sh  profiling.dot  profiling_points.csv  profiling_stats.csv  run-thailand-dab.sh  test-announcement-e2e.sh
.git-rewrite/: backup-refs  commit  parse  revs
.github/workflows/: README.md  security-tests.yml
build-tsan/.qt/: QtDeploySupport.cmake
build-tsan/.qt/deploy_qml_imports/: welle_io.cmake
build-tsan/.qt_plugins/: Qt6_QmlPlugins_Imports_welle-io.rsp
build-tsan/welle-cli_autogen/: deps
build-ubsan/: favicon.ico.h  index.html.h  index.js.h
build-ubsan/.qt/: QtDeploySupport.cmake
build-ubsan/.qt/deploy_qml_imports/: welle_io.cmake
build-ubsan/.qt_plugins/: Qt6_QmlPlugins_Imports_welle-io.rsp
build-ubsan/welle-cli_autogen/: deps
docs/: BUTTON-FIX-TEST.md  FINAL-STATUS.md  GUI-INTEGRATION-COMPLETE.md  announcement-types-implementation.md  p1-fixes-summary.md
docs/ews/: README.md  etsi-ts-104-090-compliance-assessment.md  parallel-development-plan.md  test-execution-plan.md
docs/features/: announcement-support-plan.md  announcement-support-user-guide.md  dab-alarm-checklist.md
docs/phase3/: ALL-PHASES-COMPLETE.md  announcement-manager-design.md  completion-report.md
docs/phase3/wave2/: CHANGELOG-gui-fixes.md  COMMIT-SUMMARY.md  DEVELOPER-GUIDE.md  DOCUMENTATION-INDEX.md  KNOWN-ISSUES.md  RELEASE-NOTES.md  TESTING-GUIDE.md  code-comparison.md  gui-fixes-summary.md  qt-expert-summary.md  qt-qml-expert-review.md  recommended-fixes.md  task2b-thai-localization.md
docs/security/: phase2-wave5-completion-report.md
docs/testing/: announcement-e2e-testing.md
resources/: CMakeLists.txt  thailand.qrc.in
resources/fonts/: CMakeLists.txt  README.md  thai_fonts.qrc.in
resources/thailand/: frequency-plan.json  regional-coverage.json  service-presets.json
src/backend/: announcement-manager.cpp  announcement-manager.h  announcement-types.cpp  announcement-types.h  charsets.cpp  charsets.h  dab-constants.cpp  dab-constants.h  fib-processor.cpp  fib-processor.h  location-code-manager.cpp  location-code-manager.h  radio-controller.h
src/backend/thailand-compliance/: CMakeLists.txt  add_mot_validation.patch  fix_mot_loop.sed  fix_thread_safety.sed  nbtc_compliance_checker.cpp  nbtc_compliance_checker.h  security_logger.cpp  security_logger.h  thai_service_parser.cpp  thai_service_parser.cpp.backup  thai_service_parser.cpp.insert  thai_service_parser.cpp.orig  thai_service_parser.h
src/tests/: ANNOUNCEMENT_TEST_SCENARIOS.md  CMakeLists.txt  README_ANNOUNCEMENT_TESTS.md  announcement_integration_tests.cpp  catch.hpp  security_tests.cpp  security_tests.h  test_location_code_manager.cpp  test_security_runner.cpp  test_thailand_runner.cpp  thailand_compliance_tests.cpp  thailand_compliance_tests.h
src/various/: thai_text_converter.cpp  thai_text_converter.h
src/welle-cli/: jsonconvert.cpp
src/welle-gui/: announcement_type_helper.h  main.cpp  radio_controller.cpp  radio_controller.h  resources.qrc
src/welle-gui/QML/: GeneralView.qml  MainView.qml
src/welle-gui/QML/components/: AnnouncementHistory.qml  AnnouncementIndicator.qml  ThaiDateFormatter.qml  ThaiEPGViewer.qml  ThaiServiceList.qml  WComboBox.qml
src/welle-gui/QML/expertviews/: ImpulseResponseGraph.qml  NullSymbolGraph.qml  SpectrumGraph.qml
src/welle-gui/QML/settingpages/: AirspySettings.qml  AnnouncementSettings.qml  ChannelSettings.qml  ExpertSettings.qml  GlobalSettings.qml  RTLSDRSettings.qml  RTLTCPSettings.qml  RawFileSettings.qml  SoapySDRSettings.qml
src/welle-gui/i18n/: glossary-announcement-th.md  th_TH.ts
